[package]
name = "marinade-crank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
clap = { version = "4.5.45", features = ["derive"] }
marinade-client-rs = { git = "https://github.com/kfastov/marinade-common-rs-cli" }
solana-sdk = "2.3.1"
tokio = "1.47.1"

[[bin]]
name = "marinade-crank"
